# rust-midnight-client

./: Cargo.toml  README.md  metadata.scale  out.rs
proof-server/zswap/contract/: index.cjs  index.cjs.map  index.d.cts
proof-server/zswap/keys/: output.verifier  spend.verifier
proof-server/zswap/zkir/: output.zkir  spend.zkir
src/: main.rs
