[package]
name = "example-midnight-client"
version = "0.1.0"
edition = "2021"

# Same lint list as polkadot-sdk
[workspace.lints.clippy]
all = { level = "allow", priority = 0 }
correctness = { level = "warn", priority = 1 }
complexity = { level = "warn", priority = 1 }
zero-prefixed-literal = { level = "allow", priority = 2 }            # 00_1000_000
type_complexity = { level = "allow", priority = 2 }                  # raison d'etre
needless-lifetimes = { level = "allow", priority = 2 }               # generated code
unnecessary_cast = { level = "allow", priority = 2 }                 # Types may change
identity-op = { level = "allow", priority = 2 }                      # One case where we do 0 +
useless_conversion = { level = "allow", priority = 2 }               # Types may change
unit_arg = { level = "allow", priority = 2 }                         # stylistic
option-map-unit-fn = { level = "allow", priority = 2 }               # stylistic
bind_instead_of_map = { level = "allow", priority = 2 }              # stylistic
erasing_op = { level = "allow", priority = 2 }                       # E.g. 0 * DOLLARS
eq_op = { level = "allow", priority = 2 }                            # In tests we test equality.
while_immutable_condition = { level = "allow", priority = 2 }        # false positives
needless_option_as_deref = { level = "allow", priority = 2 }         # false positives
derivable_impls = { level = "allow", priority = 2 }                  # false positives
stable_sort_primitive = { level = "allow", priority = 2 }            # prefer stable sort
extra-unused-type-parameters = { level = "allow", priority = 2 }     # stylistic
default_constructed_unit_structs = { level = "allow", priority = 2 } # stylistic

[dependencies]
# Midnight dependencies
mn-ledger = { git = "https://github.com/input-output-hk/midnight-ledger-prototype", package = "midnight-ledger", rev = "a7090886b4d1cbd281aa7efa1614087beda2f444" }
mn-zswap = { git = "https://github.com/input-output-hk/midnight-ledger-prototype", package = "midnight-zswap", rev = "a7090886b4d1cbd281aa7efa1614087beda2f444" }
midnight-onchain-runtime = { git = "https://github.com/input-output-hk/compactc", package = "midnight-onchain-runtime", branch = "ledger-v3" }
midnight-base-crypto = { git = "https://github.com/input-output-hk/midnight-foundations", package = "midnight-base-crypto", branch = "master" }
coin-structure = { git = "https://github.com/input-output-hk/midnight-foundations", package = "midnight-coin-structure", branch = "master" }
ledger-storage = { git = "https://github.com/input-output-hk/midnight-foundations", package = "midnight-storage", branch = "master" }
midnight-serialize = { git = "https://github.com/input-output-hk/midnight-foundations", package = "midnight-serialize", branch = "master" }

env_logger = "0.11.3"
subxt = "0.37"
tokio = {version = "*", features = ["rt-multi-thread"]}
hex = { default-features = false, version = "0.4.3" }
